[tool.poetry]
name = "learn-crypto"
version = "0.1.0"
description = ""
authors = ["shunk-py <auau3700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecdsa = "^0.15"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.770"
base58 = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
